feat(api): accept optional values in POST /requests
